# jax_scm

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  TODO_NUMERICS.md  cases.py  model_mynn.py  model_ysu.py  pyproject.toml  run_debug.py
data/cerra/: .gitignore  CERRA_files.txt.gz.dvc  setup_download.py
data/cerra/1_raw/: .gitignore  includes.txt  pull_cerra.sh
data/wangara/: Wangara_Sounding3309.txt  wangara_eda.ipynb
docs/: junit.xml
examples/: GABLS1_interactive.ipynb
examples/ensemble/: README.md  run_ensemble.py
examples/optical_turbulence/: .gitignore  namelist_cn.yaml  run.py
references/wangara/: Wangara_Sfc3309.txt
scm/: __init__.py  consts.py  conversions.py  convert.py  grad.py  grid.py  implicit.py  interfaces.py  mo.py  time_stepping.py  utils.py
scm/closures/: mynn.py  ysu.py
scm/config/: __init__.py  config.py  yaml.py
scm/forcing/: convert.py  era5.py  interp.py
scm/forcing/cerra/: pull_cerra.py
scm/io/: cache.py  era5.py
scm/mynn/: closure.py  interfaces.py  model.py
scm/time_stepping/: __init__.py  base.py  explicit.py  implicit.py
src/scm/: consts.py  convert.py  grad.py  grid.py  interfaces.py  metadata.py  mo.py  safe_math.py
src/scm/config/: __init__.py  config.py  yaml.py
src/scm/examples/: __init__.py  gabls1.py
src/scm/examples/andren1994/: README.md  __init__.py  andren1994.py  andren1994_tab_A1.csv
src/scm/examples/wangara/: __init__.py  wangara.py
src/scm/forcing/: era5.py  utils.py
src/scm/forcing/cerra/: pull_cerra.py
src/scm/io/: README.md  era5.py  local.py
src/scm/mynn/: closure.py  interfaces.py  io.py  model.py
src/scm/physics/utils/: __init__.py  base.py  ot.py  thermo.py
src/scm/reporter/: __init__.py  reporter.py
src/scm/time_stepping/: __init__.py  base.py  explicit.py  implicit.py  logging.py  utils.py
src/scm_ui/: app.py  cli.py  ic_bc_edit.py  result_viewer.py
tests/: shared.py  test_cache.py  test_config.py  test_diffable.py  test_e2e.py  test_interfaces.py  test_io.py  test_mo.py  test_safe_math.py  test_time_stepping.py
tests/fixtures/: README.md  gabls1  update_all.sh
tests/fixtures/andren1994/: out_ab2.nc  out_cn.nc  update.sh
tests/fixtures/gabls1/: namelist_ab2.yaml  namelist_cn.yaml  out_ab2.nc  out_cn.nc  update.sh
tests/fixtures/wangara/: namelist_ab2.yaml  namelist_cn.yaml  out_ab2.nc  out_cn.nc  update.sh
ui/: app.py  ic_bc_edit.py  res_viz.py  viz.py
validation/: .gitignore  run_all.sh
validation/_pierzyna2026/: make_figures.py
validation/andren1994/: README.md  out_ab2.nc  out_cn.nc  report_andren1994_ab2.html  report_andren1994_cn.html  run.py
validation/andren1994/ref/: a94_fig2.csv  a94_fig3a.csv  a94_fig3b.csv  a94_fig4a.csv  a94_fig6a.csv  a94_fig6b.csv
validation/gabls1/: README.md  compare.py  namelist_ab2.yaml  namelist_cn.yaml  out_ab2.nc  report_gabls1_ab2.html  report_gabls1_cn.html  run.py
validation/gabls1/ref_cuxart06/: README.md  fig02_blh.csv  fig02_ust.csv  fig03_m.csv  fig03_th.csv  fig04_hfx.csv  fig04_momentum.csv  fig06_Kh.csv  fig06_Km.csv
validation/gabls3/: run.py
validation/gabls3/ic_bc/: tend_omega.csv  tend_q_adv.csv  tend_t_adv.csv  tend_uv_adv.csv
validation/gabls3/run_manual/: run.py
validation/gabls3_era5/: README.md  run.py
validation/gabls3_era5/ref_bosveld14/: README.md
validation/wangara/: out_ab2.nc  out_cn.nc  report_wangara_ab2.html  report_wangara_cn.html  run.py
validation/wangara/ref/: day33_sfc_fluxes_Hicks81.csv  nn09_fig3.csv  nn09_fig4.csv  nn09_fig5.csv  nn09_fig6.csv  nn09_fig7.csv  nn09_fig8.csv  nn09_fig9.csv  nn09_tab1.csv
workspaces/: README.md
