[project]
name = "scm_hybrid"
version = "0.1.0"
description = "An atmospheric single column model with numerical and machine learning components written in jax."
requires-python = ">=3.12"
dependencies = [
    "jax==0.9.*",
    "matplotlib",
    "seaborn",
    "flax",
    "xarray>=2026.1.0",
    "pytest>=9.0.1",
    "jinja2>=3.1.6",
    "zarr>=3.1.5",
    "gcsfs>=2026.1.0",
    "cftime>=1.6.5",
    "dask>=2026.1.2",
    "bokeh>=3.8.2",
    "scipy>=1.16.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[tool.black]
line-length = 120  # align with pycharm
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  # Don't format submodules
  ^/submodules
  # This will match "research_tools" in any directory
  | research_tools/
)
'''

[dependency-groups]
dev = [
    "black",
    "dvc>=3.64.1",
    "dvc-ssh>=4.2.2",
    "ipykernel>=7.1.0",
    "pandas-stubs==2.3.3.*",
    "scipy-stubs==1.16.*",
    "pip>=25.3",
]
